bookmarks/styles/layout.css
/* Main layout */
body {
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  padding-bottom: 30px;
  @media (max-width: 975px) {
    margin-left: 10px;
    margin-right: 10px;
  }
}

header {
  margin-top: 20px;
  margin-bottom: var(--unit-9);

  a.app-link:hover {
    text-decoration: none;
  }

  .app-logo {
    width: 28px;
    height: 28px;
  }

  .app-name {
    margin-left: var(--unit-3);
    font-size: var(--font-size-lg);
    font-weight: 500;
    line-height: 1.2;
  }
}

/* 编辑区独立滚动 */
.scrollbar {
  max-height: calc(var(--app-viewport-height) - 140px);
  overflow-y: auto;
  overflow-x: hidden; /* 防止横向滚动 */
  
  /* 隐藏滚动条（透明）*/
  scrollbar-color: transparent transparent; /* Chrome、Edge、Firefox */

  /* Safari */
  &::-webkit-scrollbar {
    width: 8px;
  }
  &::-webkit-scrollbar-thumb {
    background: transparent;
  }
  
  /* 悬停时显示滚动条 */
  &:hover {
    scrollbar-color: var(--secondary-border-color) transparent;

    &::-webkit-scrollbar {
      width: 8px;
    }
    &::-webkit-scrollbar-thumb {
      background: var(--secondary-border-color);
      border-radius: 4px;
    }
  }
}

